--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
             <div class="navbar-nav">
-                <a class="nav-link" href="product.html">Product</a>
+                <a class="nav-link" href="Product/product.html">Product</a>
                 <a class="nav-link" href="#">Gallery</a>
                 <a class="nav-link" href="#">Blog</a>
                 <a class="nav-link" href="#">Inventory</a>
