--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     }
     
     .container-biodata {
-        padding-top: 30px;
+        padding-top: 30px
     }
     
 </style>
@@ -51,9 +51,11 @@
             <div class="data" style="float: left; margin: 20px; margin-right: 100px;">
                 <h2> Moh Dodi Setyawan</h2>
                 <p> Web Developer Program</p>
-                <div class = "button" >
-                    <input type="submit" class="kontak" value="Kontak">
-                    <input type="submit" class="resume" value="Resume">
+                <div class="btn-group" role="group" aria-label="Third group">
+                    <button type="button" class="btn btn-light">Kontak</button>
+                </div>
+                <div class="btn-group" role="group" aria-label="Third group">
+                    <button type="button" class="btn btn-light">Resume</button>
                 </div>
             </div>
             <div class="data2-bold" style="float: left; margin: 20px; line-height: 12px;">
