--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     body{
         padding-left: 100px;
         padding-right: 100px;
+        background-image: url(img/floor.png);
     }
 
     .container-form {
@@ -45,7 +46,7 @@
     <div class="container-biodata">
         <div class="jumbotron jumbotron-fluid" style="background-color: rgb(187, 187, 187); height: 170px;">
             <div class="profil">
-                <img  src="Profil.png" alt="Moh Dodi Setyawan" width="10%" class="rounded-circle img-thumbnail " style="float: left; margin: 20px">
+                <img  src="img/Profil.png" alt="Moh Dodi Setyawan" width="10%" class="rounded-circle img-thumbnail " style="float: left; margin: 20px">
             </div>
 
             <div class="data" style="float: left; margin: 20px; margin-right: 100px;">
