--- a/index.html
+++ b/index.html
@@ -11,6 +11,10 @@
         background-image: url(img/floor.png);
     }
 
+    section {
+        min-height: 420px;
+    }
+
     .container-form {
         background-color: rgb(237, 239, 239);
     }
