--- a/Product/product.html
+++ b/Product/product.html
@@ -51,10 +51,14 @@
                 <div class="card">
                     <img src="img/thumbs/1.png" class="card-img-top" alt="...">
                     <div class="card-body">
-                        <ul>
-                            <li>20000</li>
-                        </ul>
-                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                        <a href="#" class="list-group-item list-group-item-action active">
+                            <div class="d-flex w-100 justify-content-between">
+                              <h5 class="mb-1">Laptop</h5>
+                              <small>3 days ago</small>
+                            </div>
+                            <p class="mb-1">Rp.....</p>
+                            <small>Keterangan</small>
+                        </a>
                     </div>
                 </div>
             </div>
@@ -62,7 +66,14 @@
                 <div class="card">
                     <img src="img/thumbs/2.png" class="card-img-top" alt="...">
                     <div class="card-body">
-                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                        <a href="#" class="list-group-item list-group-item-action active">
+                            <div class="d-flex w-100 justify-content-between">
+                              <h5 class="mb-1">Laptop</h5>
+                              <small>3 days ago</small>
+                            </div>
+                            <p class="mb-1">Rp.....</p>
+                            <small>Keterangan</small>
+                        </a>
                     </div>
                 </div>
             </div>
@@ -70,7 +81,14 @@
                 <div class="card">
                     <img src="img/thumbs/3.png" class="card-img-top" alt="...">
                     <div class="card-body">
-                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                        <a href="#" class="list-group-item list-group-item-action active">
+                            <div class="d-flex w-100 justify-content-between">
+                              <h5 class="mb-1">Laptop</h5>
+                              <small>3 days ago</small>
+                            </div>
+                            <p class="mb-1">Rp.....</p>
+                            <small>Keterangan</small>
+                        </a>
                     </div>
                 </div>
             </div>
@@ -82,7 +100,14 @@
                 <div class="card">
                     <img src="img/thumbs/4.png" class="card-img-top" alt="...">
                     <div class="card-body">
-                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                        <a href="#" class="list-group-item list-group-item-action active">
+                            <div class="d-flex w-100 justify-content-between">
+                              <h5 class="mb-1">Laptop</h5>
+                              <small>3 days ago</small>
+                            </div>
+                            <p class="mb-1">Rp.....</p>
+                            <small>Keterangan</small>
+                        </a>
                     </div>
                 </div>
             </div>
@@ -90,7 +115,14 @@
                 <div class="card">
                     <img src="img/thumbs/5.png" class="card-img-top" alt="...">
                     <div class="card-body">
-                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                        <a href="#" class="list-group-item list-group-item-action active">
+                            <div class="d-flex w-100 justify-content-between">
+                              <h5 class="mb-1">Laptop</h5>
+                              <small>3 days ago</small>
+                            </div>
+                            <p class="mb-1">Rp.....</p>
+                            <small>Keterangan</small>
+                        </a>
                     </div>
                 </div>
             </div>
@@ -98,7 +130,14 @@
                 <div class="card">
                     <img src="img/thumbs/6.png" class="card-img-top" alt="...">
                     <div class="card-body">
-                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                        <a href="#" class="list-group-item list-group-item-action active">
+                            <div class="d-flex w-100 justify-content-between">
+                              <h5 class="mb-1">Laptop</h5>
+                              <small>3 days ago</small>
+                            </div>
+                            <p class="mb-1">Rp.....</p>
+                            <small>Keterangan</small>
+                        </a>
                     </div>
                 </div>
             </div>
