Menambahkan file thumbs dan menambahkan gambar di dalamnya

--- a/Product/product.html
+++ b/Product/product.html
@@ -48,45 +48,45 @@
         <div class="row mb-4">
             <div class="col-md">
                 <div class="card">
-                    <img src="img/thumbs/1.png" class="card-img-top" alt="...">
-                    <div class="card-body">
+                    <img src="../img/thumbs/1.png" class="card-img-top" alt="...">
+                    <div class="card-body bg-info">
                         <a href="#" class="list-group-item list-group-item-action active">
                             <div class="d-flex w-100 justify-content-between">
-                              <h5 class="mb-1">Laptop</h5>
-                              <small>3 days ago</small>
+                              <h5 class="mb-1">Laptop Dell</h5>
+                              <small>1 days ago</small>
                             </div>
-                            <p class="mb-1">Rp.....</p>
-                            <small>Keterangan</small>
+                            <p class="mb-1">Rp. 5.999.000</p>
+                            <small>Lorem ipsum dolor sit amet consectetur. Consequatur.</small>
                         </a>
                     </div>
                 </div>
             </div>
             <div class="col-md">
                 <div class="card">
-                    <img src="img/thumbs/2.png" class="card-img-top" alt="...">
-                    <div class="card-body">
+                    <img src="../img/thumbs/1.png" class="card-img-top" alt="...">
+                    <div class="card-body bg-info">
                         <a href="#" class="list-group-item list-group-item-action active">
                             <div class="d-flex w-100 justify-content-between">
-                              <h5 class="mb-1">Laptop</h5>
+                              <h5 class="mb-1">Laptop Acer</h5>
                               <small>3 days ago</small>
                             </div>
-                            <p class="mb-1">Rp.....</p>
-                            <small>Keterangan</small>
+                            <p class="mb-1">Rp. 4.200.000</p>
+                            <small>Lorem ipsum dolor sit amet consectetur adipisicing elit.</small>
                         </a>
                     </div>
                 </div>
             </div>
             <div class="col-md">
                 <div class="card">
-                    <img src="img/thumbs/3.png" class="card-img-top" alt="...">
-                    <div class="card-body">
+                    <img src="../img/thumbs/1.png" class="card-img-top" alt="...">
+                    <div class="card-body bg-info">
                         <a href="#" class="list-group-item list-group-item-action active">
                             <div class="d-flex w-100 justify-content-between">
-                              <h5 class="mb-1">Laptop</h5>
-                              <small>3 days ago</small>
+                              <h5 class="mb-1">Laptop HP</h5>
+                              <small>2 days ago</small>
                             </div>
-                            <p class="mb-1">Rp.....</p>
-                            <small>Keterangan</small>
+                            <p class="mb-1">Rp. 6.300.000</p>
+                            <small>Lorem ipsum dolor sit amet consectetur adipisicing elit.</small>
                         </a>
                     </div>
                 </div>
@@ -97,45 +97,45 @@
         <div class="row mb-4">
             <div class="col-md">
                 <div class="card">
-                    <img src="img/thumbs/4.png" class="card-img-top" alt="...">
-                    <div class="card-body">
+                    <img src="../img/thumbs/1.png" class="card-img-top" alt="...">
+                    <div class="card-body bg-info">
                         <a href="#" class="list-group-item list-group-item-action active">
                             <div class="d-flex w-100 justify-content-between">
-                              <h5 class="mb-1">Laptop</h5>
-                              <small>3 days ago</small>
+                              <h5 class="mb-1">Laptop Toshiba</h5>
+                              <small>4 days ago</small>
                             </div>
-                            <p class="mb-1">Rp.....</p>
-                            <small>Keterangan</small>
+                            <p class="mb-1">Rp. 3.500.000</p>
+                            <small>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</small>
                         </a>
                     </div>
                 </div>
             </div>
             <div class="col-md">
                 <div class="card">
-                    <img src="img/thumbs/5.png" class="card-img-top" alt="...">
-                    <div class="card-body">
+                    <img src="../img/thumbs/1.png" class="card-img-top" alt="...">
+                    <div class="card-body bg-info">
                         <a href="#" class="list-group-item list-group-item-action active">
                             <div class="d-flex w-100 justify-content-between">
-                              <h5 class="mb-1">Laptop</h5>
-                              <small>3 days ago</small>
+                              <h5 class="mb-1">Laptop Asus</h5>
+                              <small>1 days ago</small>
                             </div>
-                            <p class="mb-1">Rp.....</p>
-                            <small>Keterangan</small>
+                            <p class="mb-1">Rp. 3.000.000</p>
+                            <small>Lorem ipsum dolor sit amet consectetur adipisicing elit.</small>
                         </a>
                     </div>
                 </div>
             </div>
             <div class="col-md">
                 <div class="card">
-                    <img src="img/thumbs/6.png" class="card-img-top" alt="...">
-                    <div class="card-body">
+                    <img src="../img/thumbs/1.png" class="card-img-top" alt="...">
+                    <div class="card-body bg-info">
                         <a href="#" class="list-group-item list-group-item-action active">
                             <div class="d-flex w-100 justify-content-between">
-                              <h5 class="mb-1">Laptop</h5>
-                              <small>3 days ago</small>
+                              <h5 class="mb-1">Laptop Lenovo</h5>
+                              <small>2 days ago</small>
                             </div>
-                            <p class="mb-1">Rp.....</p>
-                            <small>Keterangan</small>
+                            <p class="mb-1">Rp. 2.000.000</p>
+                            <small>Lorem ipsum, dolor sit amet consectetur Unde necessitatibus.</small>
                         </a>
                     </div>
                 </div>
@@ -150,7 +150,7 @@
         <div class="container" style="width: auto;" >
             <div class="row pt-3">
                 <div class="col text-center">
-                    <p>Copyright 2022, Moh Dodi Setyawan.</p>
+                    <p>Copyright 2023, Moh Dodi Setyawan.</p>
                 </div>
             </div>
         </div>
