Modifikasi file product.html memberikan background color

--- a/Product/product.html
+++ b/Product/product.html
@@ -37,7 +37,7 @@
         </div>
     </nav> 
 
-    <section id="portofolio" class="portofolio bg-light pb-4">
+    <section id="portofolio" class="portofolio bg-secondary pb-4">
         <div class="container">
         <div class="row mb-4 pt-4">
             <div class="col text-center">
