--- a/Product/product.html
+++ b/Product/product.html
@@ -37,6 +37,18 @@
         </div>
     </nav> 
 
+
+    <section id="jumbotron" class="jumbotron">
+        <div class="jumbotron text-center">
+            <h1 class="display-4">Hello, world!</h1>
+            <p class="lead">This is a simple hero unit, a simple jumbotron-style component for calling extra attention to featured content or information.</p>
+            <hr class="my-4">
+            <p>It uses utility classes for typography and spacing to space content out within the larger container.</p>
+            <a class="btn btn-primary btn-lg" href="#" role="button">Mulai Belanja</a>
+          </div>
+    </section>
+
+
     <section id="portofolio" class="portofolio bg-secondary pb-4">
         <div class="container">
         <div class="row mb-4 pt-4">
