modifikasi file index.html dan product.html

--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
 
 <style>
     body{
-        padding-left: 100px;
-        padding-right: 100px;
+        padding-left: 5%;
+        padding-right: 5%;
         background-image: url(img/floor.png);
     }
 
