--- a/Product/product.html
+++ b/Product/product.html
@@ -6,8 +6,8 @@
 
 <style>
     body section{
-        padding-left: 100px;
-        padding-right: 100px;
+        padding-left: 5%;
+        padding-right: 5%;
     }
     section {
         min-height: 350px;
@@ -38,12 +38,12 @@
     </nav> 
     
 
-    <div class="jumbotron text-center pt-5 pb-5" style="background-color: rgb(225, 225, 225);">
+    <div class="jumbotron text-center pt-5 pb-5" style="background-color: rgb(225, 225, 225); padding-left: 5%; padding-right: 5%;">
         <h3 class="display-5">Selamat Datang di Product Saya</h3>
         <p class="lead">This is a simple hero unit, a simple jumbotron-style component for calling extra attention to featured content or information.</p>
-        <hr class="my-4">
+        <hr class="my-3">
         <p>It uses utility classes for typography and spacing to space content out within the larger container.</p>
-        <a class="btn btn-primary btn-lg" href="#" role="button">Mulai Belanja</a>
+        <a class="btn btn-dark btn-lg" href="#" role="button">Mulai Belanja</a>
     </div>
 
 
